--- a/LoginFrontEnd/src/index.css
+++ b/LoginFrontEnd/src/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body{
-    background-color: #202020;
-    color: white;
+    background-color: white;
+    color: black;
 }
